app/src/main/java/dev/xxdb/parser/antlr/SqlParser.java
// Generated from
// /home/nhatbui/workspace/database_system/xxdb/app/src/main/java/dev/xxdb/parser/antlr/Sql.g4 by
// ANTLR 4.13.2
package dev.xxdb.parser.antlr;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({
  "all",
  "warnings",
  "unchecked",
  "unused",
  "cast",
  "CheckReturnValue",
  "this-escape"
})
public class SqlParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      T__5 = 6,
      T__6 = 7,
      T__7 = 8,
      T__8 = 9,
      T__9 = 10,
      T__10 = 11,
      SELECT = 12,
      FROM = 13,
      WHERE = 14,
      INSERT = 15,
      INTO = 16,
      VALUES = 17,
      UPDATE = 18,
      SET = 19,
      CREATE = 20,
      TABLE = 21,
      JOIN = 22,
      ON = 23,
      LIMIT = 24,
      AND = 25,
      OR = 26,
      INT_TYPE = 27,
      VARCHAR_TYPE = 28,
      IDENTIFIER = 29,
      NUMBER = 30,
      STRING = 31,
      WS = 32;
  public static final int RULE_sql = 0,
      RULE_statement = 1,
      RULE_selectStatement = 2,
      RULE_joinClause = 3,
      RULE_limitClause = 4,
      RULE_insertStatement = 5,
      RULE_updateStatement = 6,
      RULE_createTableStatement = 7,
      RULE_columnDefinitionList = 8,
      RULE_columnDefinition = 9,
      RULE_assignmentList = 10,
      RULE_assignment = 11,
      RULE_columnList = 12,
      RULE_valueSetList = 13,
      RULE_valueList = 14,
      RULE_whereClause = 15,
      RULE_condition = 16,
      RULE_operator = 17,
      RULE_dataType = 18,
      RULE_columnName = 19,
      RULE_tableName = 20,
      RULE_value = 21;

  private static String[] makeRuleNames() {
    return new String[] {
      "sql",
      "statement",
      "selectStatement",
      "joinClause",
      "limitClause",
      "insertStatement",
      "updateStatement",
      "createTableStatement",
      "columnDefinitionList",
      "columnDefinition",
      "assignmentList",
      "assignment",
      "columnList",
      "valueSetList",
      "valueList",
      "whereClause",
      "condition",
      "operator",
      "dataType",
      "columnName",
      "tableName",
      "value"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "';'",
      "'('",
      "')'",
      "','",
      "'='",
      "'>'",
      "'<'",
      "'<='",
      "'>='",
      "'!='",
      "'.'",
      "'SELECT'",
      "'FROM'",
      "'WHERE'",
      "'INSERT'",
      "'INTO'",
      "'VALUES'",
      "'UPDATE'",
      "'SET'",
      "'CREATE'",
      "'TABLE'",
      "'JOIN'",
      "'ON'",
      "'LIMIT'",
      "'AND'",
      "'OR'",
      "'INT'",
      "'VARCHAR'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "SELECT",
      "FROM",
      "WHERE",
      "INSERT",
      "INTO",
      "VALUES",
      "UPDATE",
      "SET",
      "CREATE",
      "TABLE",
      "JOIN",
      "ON",
      "LIMIT",
      "AND",
      "OR",
      "INT_TYPE",
      "VARCHAR_TYPE",
      "IDENTIFIER",
      "NUMBER",
      "STRING",
      "WS"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Sql.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public SqlParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SqlContext extends ParserRuleContext {
    public StatementContext statement() {
      return getRuleContext(StatementContext.class, 0);
    }

    public TerminalNode EOF() {
      return getToken(SqlParser.EOF, 0);
    }

    public SqlContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sql;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterSql(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitSql(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor) return ((SqlVisitor<? extends T>) visitor).visitSql(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SqlContext sql() throws RecognitionException {
    SqlContext _localctx = new SqlContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_sql);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(44);
        statement();
        setState(46);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(45);
              match(T__0);
            }
          }
          setState(48);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while (_la == T__0);
        setState(50);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StatementContext extends ParserRuleContext {
    public SelectStatementContext selectStatement() {
      return getRuleContext(SelectStatementContext.class, 0);
    }

    public InsertStatementContext insertStatement() {
      return getRuleContext(InsertStatementContext.class, 0);
    }

    public UpdateStatementContext updateStatement() {
      return getRuleContext(UpdateStatementContext.class, 0);
    }

    public CreateTableStatementContext createTableStatement() {
      return getRuleContext(CreateTableStatementContext.class, 0);
    }

    public StatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_statement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StatementContext statement() throws RecognitionException {
    StatementContext _localctx = new StatementContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_statement);
    try {
      setState(56);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case SELECT:
          enterOuterAlt(_localctx, 1);
          {
            setState(52);
            selectStatement();
          }
          break;
        case INSERT:
          enterOuterAlt(_localctx, 2);
          {
            setState(53);
            insertStatement();
          }
          break;
        case UPDATE:
          enterOuterAlt(_localctx, 3);
          {
            setState(54);
            updateStatement();
          }
          break;
        case CREATE:
          enterOuterAlt(_localctx, 4);
          {
            setState(55);
            createTableStatement();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SelectStatementContext extends ParserRuleContext {
    public TerminalNode SELECT() {
      return getToken(SqlParser.SELECT, 0);
    }

    public ColumnListContext columnList() {
      return getRuleContext(ColumnListContext.class, 0);
    }

    public TerminalNode FROM() {
      return getToken(SqlParser.FROM, 0);
    }

    public TableNameContext tableName() {
      return getRuleContext(TableNameContext.class, 0);
    }

    public JoinClauseContext joinClause() {
      return getRuleContext(JoinClauseContext.class, 0);
    }

    public WhereClauseContext whereClause() {
      return getRuleContext(WhereClauseContext.class, 0);
    }

    public LimitClauseContext limitClause() {
      return getRuleContext(LimitClauseContext.class, 0);
    }

    public SelectStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_selectStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterSelectStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitSelectStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitSelectStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SelectStatementContext selectStatement() throws RecognitionException {
    SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_selectStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(58);
        match(SELECT);
        setState(59);
        columnList();
        setState(60);
        match(FROM);
        setState(61);
        tableName();
        setState(63);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == JOIN) {
          {
            setState(62);
            joinClause();
          }
        }

        setState(66);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WHERE) {
          {
            setState(65);
            whereClause();
          }
        }

        setState(69);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == LIMIT) {
          {
            setState(68);
            limitClause();
          }
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class JoinClauseContext extends ParserRuleContext {
    public TerminalNode JOIN() {
      return getToken(SqlParser.JOIN, 0);
    }

    public TableNameContext tableName() {
      return getRuleContext(TableNameContext.class, 0);
    }

    public TerminalNode ON() {
      return getToken(SqlParser.ON, 0);
    }

    public ConditionContext condition() {
      return getRuleContext(ConditionContext.class, 0);
    }

    public JoinClauseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_joinClause;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterJoinClause(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitJoinClause(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitJoinClause(this);
      else return visitor.visitChildren(this);
    }
  }

  public final JoinClauseContext joinClause() throws RecognitionException {
    JoinClauseContext _localctx = new JoinClauseContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_joinClause);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(71);
        match(JOIN);
        setState(72);
        tableName();
        setState(73);
        match(ON);
        setState(74);
        condition(0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class LimitClauseContext extends ParserRuleContext {
    public TerminalNode LIMIT() {
      return getToken(SqlParser.LIMIT, 0);
    }

    public TerminalNode NUMBER() {
      return getToken(SqlParser.NUMBER, 0);
    }

    public LimitClauseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_limitClause;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterLimitClause(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitLimitClause(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitLimitClause(this);
      else return visitor.visitChildren(this);
    }
  }

  public final LimitClauseContext limitClause() throws RecognitionException {
    LimitClauseContext _localctx = new LimitClauseContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_limitClause);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(76);
        match(LIMIT);
        setState(77);
        match(NUMBER);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class InsertStatementContext extends ParserRuleContext {
    public TerminalNode INSERT() {
      return getToken(SqlParser.INSERT, 0);
    }

    public TerminalNode INTO() {
      return getToken(SqlParser.INTO, 0);
    }

    public TableNameContext tableName() {
      return getRuleContext(TableNameContext.class, 0);
    }

    public ColumnListContext columnList() {
      return getRuleContext(ColumnListContext.class, 0);
    }

    public TerminalNode VALUES() {
      return getToken(SqlParser.VALUES, 0);
    }

    public ValueSetListContext valueSetList() {
      return getRuleContext(ValueSetListContext.class, 0);
    }

    public InsertStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_insertStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterInsertStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitInsertStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitInsertStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final InsertStatementContext insertStatement() throws RecognitionException {
    InsertStatementContext _localctx = new InsertStatementContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_insertStatement);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(79);
        match(INSERT);
        setState(80);
        match(INTO);
        setState(81);
        tableName();
        setState(82);
        match(T__1);
        setState(83);
        columnList();
        setState(84);
        match(T__2);
        setState(85);
        match(VALUES);
        setState(86);
        valueSetList();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class UpdateStatementContext extends ParserRuleContext {
    public TerminalNode UPDATE() {
      return getToken(SqlParser.UPDATE, 0);
    }

    public TableNameContext tableName() {
      return getRuleContext(TableNameContext.class, 0);
    }

    public TerminalNode SET() {
      return getToken(SqlParser.SET, 0);
    }

    public AssignmentListContext assignmentList() {
      return getRuleContext(AssignmentListContext.class, 0);
    }

    public WhereClauseContext whereClause() {
      return getRuleContext(WhereClauseContext.class, 0);
    }

    public UpdateStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_updateStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterUpdateStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitUpdateStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitUpdateStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final UpdateStatementContext updateStatement() throws RecognitionException {
    UpdateStatementContext _localctx = new UpdateStatementContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_updateStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(88);
        match(UPDATE);
        setState(89);
        tableName();
        setState(90);
        match(SET);
        setState(91);
        assignmentList();
        setState(93);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WHERE) {
          {
            setState(92);
            whereClause();
          }
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class CreateTableStatementContext extends ParserRuleContext {
    public TerminalNode CREATE() {
      return getToken(SqlParser.CREATE, 0);
    }

    public TerminalNode TABLE() {
      return getToken(SqlParser.TABLE, 0);
    }

    public TableNameContext tableName() {
      return getRuleContext(TableNameContext.class, 0);
    }

    public ColumnDefinitionListContext columnDefinitionList() {
      return getRuleContext(ColumnDefinitionListContext.class, 0);
    }

    public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_createTableStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterCreateTableStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitCreateTableStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitCreateTableStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final CreateTableStatementContext createTableStatement() throws RecognitionException {
    CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_createTableStatement);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(95);
        match(CREATE);
        setState(96);
        match(TABLE);
        setState(97);
        tableName();
        setState(98);
        match(T__1);
        setState(99);
        columnDefinitionList();
        setState(100);
        match(T__2);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ColumnDefinitionListContext extends ParserRuleContext {
    public List<ColumnDefinitionContext> columnDefinition() {
      return getRuleContexts(ColumnDefinitionContext.class);
    }

    public ColumnDefinitionContext columnDefinition(int i) {
      return getRuleContext(ColumnDefinitionContext.class, i);
    }

    public ColumnDefinitionListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_columnDefinitionList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterColumnDefinitionList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitColumnDefinitionList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitColumnDefinitionList(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ColumnDefinitionListContext columnDefinitionList() throws RecognitionException {
    ColumnDefinitionListContext _localctx = new ColumnDefinitionListContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_columnDefinitionList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(102);
        columnDefinition();
        setState(107);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__3) {
          {
            {
              setState(103);
              match(T__3);
              setState(104);
              columnDefinition();
            }
          }
          setState(109);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ColumnDefinitionContext extends ParserRuleContext {
    public ColumnNameContext columnName() {
      return getRuleContext(ColumnNameContext.class, 0);
    }

    public DataTypeContext dataType() {
      return getRuleContext(DataTypeContext.class, 0);
    }

    public ColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_columnDefinition;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterColumnDefinition(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitColumnDefinition(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitColumnDefinition(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
    ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_columnDefinition);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(110);
        columnName();
        setState(111);
        dataType();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class AssignmentListContext extends ParserRuleContext {
    public List<AssignmentContext> assignment() {
      return getRuleContexts(AssignmentContext.class);
    }

    public AssignmentContext assignment(int i) {
      return getRuleContext(AssignmentContext.class, i);
    }

    public AssignmentListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_assignmentList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterAssignmentList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitAssignmentList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitAssignmentList(this);
      else return visitor.visitChildren(this);
    }
  }

  public final AssignmentListContext assignmentList() throws RecognitionException {
    AssignmentListContext _localctx = new AssignmentListContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_assignmentList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(113);
        assignment();
        setState(118);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__3) {
          {
            {
              setState(114);
              match(T__3);
              setState(115);
              assignment();
            }
          }
          setState(120);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class AssignmentContext extends ParserRuleContext {
    public ColumnNameContext columnName() {
      return getRuleContext(ColumnNameContext.class, 0);
    }

    public ValueContext value() {
      return getRuleContext(ValueContext.class, 0);
    }

    public AssignmentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_assignment;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterAssignment(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitAssignment(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitAssignment(this);
      else return visitor.visitChildren(this);
    }
  }

  public final AssignmentContext assignment() throws RecognitionException {
    AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_assignment);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(121);
        columnName();
        setState(122);
        match(T__4);
        setState(123);
        value();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ColumnListContext extends ParserRuleContext {
    public List<ColumnNameContext> columnName() {
      return getRuleContexts(ColumnNameContext.class);
    }

    public ColumnNameContext columnName(int i) {
      return getRuleContext(ColumnNameContext.class, i);
    }

    public ColumnListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_columnList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterColumnList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitColumnList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitColumnList(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ColumnListContext columnList() throws RecognitionException {
    ColumnListContext _localctx = new ColumnListContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_columnList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(125);
        columnName();
        setState(130);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__3) {
          {
            {
              setState(126);
              match(T__3);
              setState(127);
              columnName();
            }
          }
          setState(132);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ValueSetListContext extends ParserRuleContext {
    public List<ValueListContext> valueList() {
      return getRuleContexts(ValueListContext.class);
    }

    public ValueListContext valueList(int i) {
      return getRuleContext(ValueListContext.class, i);
    }

    public ValueSetListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_valueSetList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).enterValueSetList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SqlListener) ((SqlListener) listener).exitValueSetList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SqlVisitor)
        return ((SqlVisitor<? extends T>) visitor).visitValueSetList(this);
      else return visitor.visitChildren(this);
    }
  }
